--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 </head>
 
 <body>
- 
+    <header>
+        <h1>Media das Notas dos Alunos</h1>
+    </header>
+    <main>
+        <div>
+            <p>Nota: </p>
+            <input type="text" name="nota" id="inputtxt">
+            <button type="submit">Adicionar</button>
+            <textarea disabled></textarea>
+            <button type="submit">Calcular Media</button>
+            <p>A media é:</p>
+        </div>
+    </main>
+    
     <script src="script.js"></script>   
 </body>
 </html>
