--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <textarea rows="10" cols="30000" disabled id="textta"></textarea>
             </div>
             <button type="submit" id="calcmediabut">Calcular Media</button>
+            <button type="submit" id="reset">Reset</button>
             <div id="textmedia">
                 <p>A media é:   </p> <p id="resultmedia"></p>
             </div>
